# Apply-AI-Agent

./: README.md  main.py  pyproject.toml
app/: config.py
app/prompts/: cover_letter.txt  extract_job.txt  extract_resume.txt  resume_suggestions.txt
app/schemas/: response.py
app/services/: analyzer.py  cover_letter.py  extractor.py  llm_service.py  matcher.py  pdf_parser.py
frontend/: README.md
frontend/app/: page.tsx
frontend/app/types/: analysis.ts
schemas/: request.py
tests/: test_analyze_upload.py
