[project]
name = "job-app-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.0",
    "openai>=2.29.0",
    "pymupdf>=1.26.5",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "ruff>=0.15.6",
    "uvicorn>=0.38.0",
]
